--- a/runtime/wrap.ejs
+++ b/runtime/wrap.ejs
@@ -14,8 +14,8 @@
 	(function() {
 
 		var Object, Boolean, Number, String, Array, Function, Range, Symbol,
-			Generator, reflect, boolean, number, int, uint, string, function_,
-			inf;
+			Generator, Promise, reflect, boolean, number, int, uint, string,
+			function_, inf, setTimeout;
 
 		(function() {
 
@@ -28,6 +28,7 @@
 			Range = $__proto__$.Range;
 			Symbol = $__proto__$.Symbol;
 			Generator = $__proto__$.Generator;
+			Promise = $__proto__$.Promise;
 			reflect = $__proto__$.reflect;
 			inf = $__proto__$.Infinity;
 
